--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -85,6 +85,9 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
 
+                <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Dark.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml"/>
+
                 <!--  Theme setting  -->
                 <hc:ThemeResources RequestedTheme="Dark" />
                 <hc:Theme />
