--- a/WolvenKit/Views/Shell/MainView.xaml
+++ b/WolvenKit/Views/Shell/MainView.xaml
@@ -1,23 +1,24 @@
-<catel:UserControl
+<adonisControls:AdonisWindow 
     x:Class="WolvenKit.Views.Shell.MainView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:ad="clr-namespace:WolvenKit.Functionality.Layout"
-    xmlns:audiotoolz="clr-namespace:WolvenKit.Views.Editor.AudioTool"
-    xmlns:catel="http://schemas.catelproject.com"
     xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
-    xmlns:cr2weditor1="clr-namespace:WolvenKit.Views.Editor"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:editor="clr-namespace:WolvenKit.Views.Editor"
-    xmlns:importertool1="clr-namespace:WolvenKit.Views.Editor"
     xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
     xmlns:shell="clr-namespace:WolvenKit.Views.Shell"
-    xmlns:shell1="clr-namespace:WolvenKit.ViewModels.Shell;assembly=WolvenKit.App"
-    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
-    xmlns:views1="clr-namespace:WolvenKit.Views.Editor"
-    xmlns:visualeditorz="clr-namespace:WolvenKit.Views.Editor.VisualEditor">
 
-    <catel:UserControl.Resources>
+    xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    
+    PlaceTitleBarOverContent="True"
+    IconVisibility="Hidden"
+    >
+
+    <Window.Style>
+        <Style TargetType="Window" BasedOn="{StaticResource {x:Type Window}}"/>
+    </Window.Style>
+
+    <adonisControls:AdonisWindow.Resources>
         <DrawingBrush
             x:Key="CloudDrawingBrushMain"
             o:Freeze="True"
@@ -36,25 +37,32 @@
                     Rect="0,0,70,80" />
             </DrawingBrush.Drawing>
         </DrawingBrush>
-    </catel:UserControl.Resources>
+    </adonisControls:AdonisWindow.Resources>
 
     <Grid Background="{DynamicResource CloudDrawingBrushMain}">
         <Grid.Resources>
             <converters:ActiveDocumentConverter x:Key="ActiveDocumentConverter" />
-            <BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+            <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
         </Grid.Resources>
 
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="25" />
         </Grid.RowDefinitions>
-        <Grid />
+        
 
+        <shell:RibbonView Grid.Row="0"></shell:RibbonView>
 
-        <shell:DockingAdapter ActiveDocument="{Binding ActiveDocument, Mode=TwoWay}" ItemsSource="{Binding Tools}" />
+        <shell:DockingAdapter Grid.Row="1" ActiveDocument="{Binding ActiveDocument, Mode=TwoWay}" ItemsSource="{Binding Tools}" />
 
+        <shell:StatusBarView Grid.Row="2"></shell:StatusBarView>
 
-
-
+        <ScrollViewer   
+            VerticalScrollBarVisibility="Hidden" 
+            HorizontalAlignment="Right">
+            <StackPanel hc:Growl.GrowlParent="True" VerticalAlignment="Top" Margin="0,35,10,10"/>
+        </ScrollViewer>
 
     </Grid>
-</catel:UserControl>
+</adonisControls:AdonisWindow>
