--- a/WolvenKit/Views/HomePage/Pages/GithubPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/GithubPageView.xaml
@@ -15,7 +15,7 @@
      >
         <Grid Margin="3,75,3,0">
 
-                <wv2:WebView2 x:Name="cal" Source="https://github.com/WolvenKit/Wolven-kit" />
+                <wv2:WebView2 x:Name="cal"/>
         </Grid>
 
             <StackPanel
