--- a/WolvenKit/Views/HomePage/Pages/WebsitePageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/WebsitePageView.xaml
@@ -16,7 +16,7 @@
 
         <Grid Margin="3,75,3,0">
 
-                <wv2:WebView2 x:Name="cal" Source="https://redmodding.org/" />
+                <wv2:WebView2 x:Name="cal" />
         </Grid>
 
             <StackPanel
