--- a/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
@@ -4,10 +4,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:reactiveUi="http://reactiveui.net"
-    xmlns:converters1="clr-namespace:WolvenKit.Functionality.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:editor="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
-    xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
@@ -17,19 +15,16 @@
     d:DesignWidth="400"
     mc:Ignorable="d">
 
-   
+   <UserControl.Resources>
+       <ResourceDictionary>
+           <ResourceDictionary.MergedDictionaries>
+               <hc:ThemeResources RequestedTheme="Dark" />
+               <hc:Theme />
+           </ResourceDictionary.MergedDictionaries>
+       </ResourceDictionary>
+    </UserControl.Resources>
 
     <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}">
-        <Grid.Resources>
-            <ResourceDictionary>
-                <ResourceDictionary.MergedDictionaries>
-                    <hc:ThemeResources RequestedTheme="Dark" />
-                    <hc:Theme />
-                </ResourceDictionary.MergedDictionaries>
-            </ResourceDictionary>
-
-            <converters1:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
-        </Grid.Resources>
 
         <syncfusion:SfTreeGrid
             Margin="0,0,3,0"
@@ -44,10 +39,8 @@
             ExpandStateMappingName="IsExpanded"
             FilterLevel="Extended"
             IsReadOnly="True"
-            ItemsSource="{Binding BindGrid1, Mode=OneWay}"
             LiveNodeUpdateMode="AllowDataShaping"
             MouseDown="TreeGrid_MouseDown"
-            SelectionChanged="TreeGrid_SelectionChanged"
             ParentPropertyName="Hash"
             RowHeight="17"
             SelectedItem="{Binding SelectedItem}"
