--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -20,7 +20,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
             <RowDefinition Height="3*" />
-            <RowDefinition Height="70" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
@@ -30,38 +30,37 @@
 
         <!--  Main Grid  -->
         <Grid
-            Grid.RowSpan="4"
-            Grid.ColumnSpan="4"
+            Grid.RowSpan="3"
+            Grid.ColumnSpan="3"
             Background="Gray">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
-                <RowDefinition Height="80" />
+                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
             <!--  Switch Views  -->
             <Grid Grid.Row="0" Background="{DynamicResource ContentBackgroundAlt2}">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text=" VIEW : " />
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <RadioButton
                         x:Name="ImportCheckBox"
-                        Margin="5,0,5,0"
+                        Margin="5,2,5,2"
                         Background="Transparent"
-                        Content="IMPORTABLES"
+                        Content="IMPORT"
                         GroupName="bob"
                         IsChecked="{Binding IsImportsSelected}" />
                     <RadioButton
                         x:Name="ExportCheckBox"
                         Background="Transparent"
                         Margin="0,0,5,0"
-                        Content="EXPORTABLES"
+                        Content="EXPORT"
                         GroupName="bob"
                         IsChecked="{Binding IsExportsSelected}" />
                     <RadioButton
                         x:Name="ConvertCheckbox"
                         HorizontalAlignment="Right"
                         Background="Transparent"
-                        Content="CONVERTABLES"
+                        Content="CONVERT"
                         GroupName="bob"
                         IsChecked="{Binding IsConvertsSelected}"
                         Visibility="Visible" />
@@ -213,39 +212,43 @@
 
             <!--  Bottom Button Panel Main  -->
 
-            <Grid Grid.Row="2" Background="{DynamicResource ContentBackgroundAlt2}">
+            <Grid Grid.Row="2" Background="{DynamicResource ContentBackgroundAlt2}" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition MinWidth="220" Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-                <StackPanel Orientation="Vertical">
-                    <StackPanel
-                        Margin="0,5,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Center"
-                        Orientation="Horizontal">
+                <StackPanel Orientation="Horizontal"
+                    Margin="6,4,6,4"
+                    Grid.Column="0">
 
-                        <Button
-                            Margin="5,0,5,0"
-                            Padding="2,0,2,0"
+                    <Button
+                            Margin="4,0,4,0"
+                            Padding="4"
+                            VerticalAlignment="Center"
                             Background="{DynamicResource ContentBackground}"
                             BorderBrush="{DynamicResource ContentBackgroundAlt}"
                             BorderThickness="1"
                             Command="{Binding ProcessSelectedCommand}"
                             FontSize="12"
                             Style="{DynamicResource ButtonCustom}">
-                            <StackPanel Orientation="Horizontal">
-                                <iconPacks:PackIconCodicons
-                                    Width="13"
-                                    Height="13"
+                        <StackPanel Orientation="Horizontal">
+                            <iconPacks:PackIconCodicons
+                                    Width="16"
+                                    Height="16"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
+                                    Margin="2"
                                     Kind="DebugStart" />
 
-                                <TextBlock Text="Process Selected" />
-                            </StackPanel>
-                        </Button>
+                            <TextBlock Text="Process Selected" />
+                        </StackPanel>
+                    </Button>
 
-                        <Button
-                            Margin="5,0,5,0"
-                            Padding="2,0,2,0"
+                    <Button
+                            Margin="4,0,4,0"
+                            Padding="4"
                             VerticalAlignment="Center"
                             Background="{DynamicResource ContentBackground}"
                             BorderBrush="{DynamicResource ContentBackgroundAlt}"
@@ -253,54 +256,65 @@
                             Command="{Binding ProcessAllCommand}"
                             FontSize="12"
                             Style="{DynamicResource ButtonCustom}">
-                            <StackPanel Orientation="Horizontal">
-                                <iconPacks:PackIconCodicons
-                                    Width="13"
-                                    Height="13"
+                        <StackPanel Orientation="Horizontal">
+                            <iconPacks:PackIconCodicons
+                                    Width="16"
+                                    Height="16"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
+                                    Margin="2"
                                     Kind="RunAll" />
 
-                                <TextBlock Text="Process All" />
-                            </StackPanel>
-                        </Button>
-                    </StackPanel>
-                    <StackPanel
-                        Margin="0,5,0,5"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Center"
-                        Orientation="Horizontal">
-                        <ToggleButton
-                            Margin="5,0,5,0"
-                            Padding="2,0,2,0"
+                            <TextBlock Text="Process All" />
+                        </StackPanel>
+                    </Button>
+
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal"
+                    Margin="6,4,6,4"
+                    Grid.Column="1"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+
+                    <ToggleButton
+                            Margin="5,0,10,0"
+                            Padding="4"
+                            HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             Background="{DynamicResource ContentBackgroundAlt}"
                             IsChecked="{Binding SelectionLocked}"
                             Style="{DynamicResource WPFToggleButtonStyle}"
-                            ToolTip="Lock selected file.">
-                            <StackPanel Orientation="Horizontal">
-                                <iconPacks:BootstrapIcons Kind="Lock" />
+                            ToolTip="Lock selected file">
+                        <StackPanel Orientation="Horizontal">
+                            <iconPacks:BootstrapIcons Kind="Lock" />
 
-                                <TextBlock Text="Lock Selection" />
-                            </StackPanel>
-                        </ToggleButton>
-                        <hc:Divider Orientation="Vertical" />
+                        </StackPanel>
+                    </ToggleButton>
 
-                        <TextBlock
+                    <TextBlock
                             x:Name="CurrentSelectedItemButtonbar"
                             VerticalAlignment="Center"
-                            FontSize="12"
+                            FontSize="11"
                             Text="{Binding CurrentSelectedInGridName}" />
-                        <hc:Divider Orientation="Vertical" />
-                    </StackPanel>
+                    
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal"
+                    Margin="6,4,6,4"
+                    Grid.Column="2"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center">
 
                     <StackPanel
-                        Margin="5,0"
-                        HorizontalAlignment="Left"
+                        Margin="6,0,6,0"
+                        HorizontalAlignment="Right"
                         VerticalAlignment="Center"
                         Orientation="Horizontal">
+
                         <Button
-                            Padding="2,0,2,0"
+                            Padding="4"
+                            Margin="6,0,6,0"
                             VerticalAlignment="Center"
                             Background="{DynamicResource ContentBackground}"
                             BorderBrush="{DynamicResource ContentBackgroundAlt}"
@@ -308,46 +322,36 @@
                             Command="{Binding CopyArgumentsTemplateToCommand}"
                             CommandParameter="{Binding Path=SelectedItem.Content, ElementName=ToThese}"
                             FontSize="12"
+                            ToolTip="Copy I/O settings from selected file"
                             Style="{DynamicResource ButtonCustom}">
                             <StackPanel Orientation="Horizontal">
                                 <iconPacks:PackIconForkAwesome
-                                    Width="15"
-                                    Height="15"
+                                    Width="16"
+                                    Height="16"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
+                                    Margin="2"
                                     Kind="FilesOutline" />
-                                <TextBlock Text="Copy" />
+                                <TextBlock Text="Copy Settings" />
                             </StackPanel>
                         </Button>
-                        <TextBlock VerticalAlignment="Center" Text="settings from selected file to : " />
                         <syncfusion:ComboBoxAdv
                             x:Name="ToThese"
+                            Margin="6,0,6,0"
                             VerticalAlignment="Center"
                             FontSize="12"
+                            ToolTip="Destination for copied settings"
                             SelectedIndex="0"
                             Text="apply">
 
                             <syncfusion:ComboBoxItemAdv Content="Selected in Grid" />
                             <syncfusion:ComboBoxItemAdv Content="All in Grid" />
                         </syncfusion:ComboBoxAdv>
-                        <Button
-                            Margin="5,0,5,0"
-                            Padding="2,0,2,0"
-                            VerticalAlignment="Center"
-                            Click="Button_Click"
-                            FontSize="12"
-                            Style="{DynamicResource ButtonCustom}">
-                            <StackPanel Orientation="Horizontal">
-                                <iconPacks:PackIconEntypo
-                                    Width="13"
-                                    Height="13"
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"
-                                    Kind="help" />
-                                <TextBlock Text="Help" />
-                            </StackPanel>
-                        </Button>
+
                     </StackPanel>
+
+
+
                 </StackPanel>
             </Grid>
         </Grid>
@@ -366,7 +370,7 @@
 
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="50" />
+                    <RowDefinition Height="40" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
@@ -386,15 +390,15 @@
                     <TextBlock
                         x:Name="XAML_AdvancedOptionsExtension"
                         Padding="5,0,5,0"
-                        FontSize="15"
+                        FontSize="24"
                         Text="EXTENSION" />
                 </Border>
 
                 <StackPanel
                     Grid.Row="1"
-                    Margin="10,-15"
-                    VerticalAlignment="Top"
-                    Orientation="Vertical">
+                    Margin="8,2"
+                    VerticalAlignment="Center"
+                    Orientation="Horizontal">
                     <StackPanel Margin="0,5" Orientation="Horizontal">
                         <TextBlock FontSize="10" Text="Selected : " />
                         <TextBlock
@@ -402,18 +406,25 @@
                             FontSize="10"
                             Text="FileName" />
                     </StackPanel>
+                </StackPanel>
+
+                <StackPanel
+                    Grid.Row="1"
+                    Margin="0">
 
                     <CheckBox
                         x:Name="ApplyToAllCheckbox"
-                        Margin="3,0,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        Content="Apply to all files of the same Extension"
+                        Margin="8,4,8,4"
+                        Padding="4,0,4,0"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Center"
+                        Content="Apply to all files of the same extension"
                         FontSize="10"
                         Style="{DynamicResource MahApps.Styles.CheckBox.DataGrid}" />
+
                 </StackPanel>
 
-                <Button
+                    <Button
                     Width="80"
                     Height="39"
                     HorizontalAlignment="Right"
@@ -431,7 +442,8 @@
                 Margin="2"
                 Background="{DynamicResource ContentBackgroundAlt}">
                 <syncfusion:PropertyGrid
-                    ButtonPanelVisibility="Collapsed"
+                    ButtonPanelVisibility="Hidden"
+                    SearchBoxVisibility="Hidden"
                     CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
                     CollectionEditorOpening="PropertyGrid_CollectionEditorOpening"
                     DescriptionPanelVisibility="Visible"
